# Lumora

./: .gitignore
backend/: .env  pyproject.toml  test_parser.py  test_security.py
backend/alembic/: env.py
backend/alembic/versions/: 0fac7ce96394_add_email_verification_table.py  15f9de1e6c5e_add_resources_table.py  3e5ea7949800_add_workspaces_table.py  5fe74f873826_add_password_reset_table.py  6584eb01cc34_initial_schema.py  693bb2f3995c_initialize_database.py  77b5f563219d_add_workspace_members_and_invitations.py  c55b0a64982e_add_chat_sessions_and_messages.py  ce1a21261984_add_user_roles.py  ee60269bcb2d_add_chunk_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  deps.py  flashcard.py  health.py  oauth.py  quiz.py  resources.py  revision.py  roadmap.py  summary.py  users.py  workspace_members.py  workspaces.py
backend/app/config/: logging.py  settings.py
backend/app/core/: __init__.py  exceptions.py  handlers.py  lifespan.py  middleware.py  security.py
backend/app/db/: base.py  base_model.py  dependencies.py  session.py
backend/app/models/: __init__.py  chat_message.py  chat_session.py  chunk.py  email_verification.py  password_reset.py  resource.py  user.py  workspace.py  workspace_invitation.py  workspace_member.py
backend/app/repositories/: __init__.py  auth_repository.py  chat_repository.py  chunk_repository.py  email_verification_repository.py  resource_repository.py  workspace_invitation_repository.py  workspace_member_repository.py  workspace_repository.py
backend/test_files/: README.md  notes.txt
(+39 files in other folders)
